--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -114,3 +114,94 @@
   color: #24292f;
   font-weight: bold;
 }
+
+/* Dark mode syntax highlighting */
+@media (prefers-color-scheme: dark) {
+  .highlight, .highlight .w {
+    color: #e6edf3;
+    background-color: #1c1c1c;
+  }
+
+  /* Keywords */
+  .highlight .k, .highlight .kd, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kt, .highlight .kv {
+    color: #ff7b72;
+  }
+
+  /* Strings */
+  .highlight .s, .highlight .sb, .highlight .sc, .highlight .dl, .highlight .s2, .highlight .se, .highlight .sh, .highlight .si, .highlight .sx, .highlight .sr, .highlight .s1, .highlight .ss {
+    color: #a5d6ff;
+  }
+
+  /* Numbers */
+  .highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
+    color: #79c0ff;
+  }
+
+  /* Comments */
+  .highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1, .highlight .cs {
+    color: #8b949e;
+    font-style: italic;
+  }
+
+  /* Functions and methods */
+  .highlight .nf, .highlight .fm {
+    color: #d2a8ff;
+  }
+
+  /* Classes */
+  .highlight .nc, .highlight .no, .highlight .ni {
+    color: #ffa657;
+  }
+
+  /* Variables */
+  .highlight .nv, .highlight .vc, .highlight .vg, .highlight .vi, .highlight .vm {
+    color: #79c0ff;
+  }
+
+  /* Operators */
+  .highlight .o, .highlight .ow {
+    color: #ff7b72;
+  }
+
+  /* Built-ins */
+  .highlight .nb, .highlight .bp {
+    color: #ffa657;
+  }
+
+  /* Decorators */
+  .highlight .nd {
+    color: #d2a8ff;
+  }
+
+  /* Line numbers */
+  .highlight .lineno {
+    color: #6e7681;
+  }
+
+  /* Diff additions */
+  .highlight .gi {
+    color: #aff5b4;
+    background-color: #033a16;
+  }
+
+  /* Diff deletions */
+  .highlight .gd {
+    color: #ffdcd7;
+    background-color: #67060c;
+  }
+
+  /* Namespace */
+  .highlight .nn {
+    color: #ffa657;
+  }
+
+  /* Attributes */
+  .highlight .na {
+    color: #79c0ff;
+  }
+
+  /* Tags */
+  .highlight .nt {
+    color: #7ee787;
+  }
+}
