feat(seo): fix blog post descriptions and add og:site_name
- Fix meta description to use page.description or page.excerpt
- Apply same logic to og:description and twitter:description
- Add og:site_name for better social sharing
- Blog posts now show unique descriptions instead of generic site description

This significantly improves SEO as search engines can now properly
understand what each blog post is about.

--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -7,14 +7,15 @@ html(lang="en")
     //- Basic SEO
     title
       | {% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}
-    meta(name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}")
+    meta(name="description" content="{% if page.description %}{{ page.description }}{% elsif page.excerpt %}{{ page.excerpt | strip_html | truncatewords: 30 }}{% else %}{{ site.description }}{% endif %}")
     link(rel="canonical" href="{{ site.url }}{{ page.url }}")
 
     //- OpenGraph tags for social sharing
     meta(property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}")
-    meta(property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}")
+    meta(property="og:description" content="{% if page.description %}{{ page.description }}{% elsif page.excerpt %}{{ page.excerpt | strip_html | truncatewords: 30 }}{% else %}{{ site.description }}{% endif %}")
     meta(property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}")
     meta(property="og:url" content="{{ site.url }}{{ page.url }}")
+    meta(property="og:site_name" content="{{ site.title }}")
     | {% if page.image %}
     meta(property="og:image" content="{{ site.url }}{{ page.image }}")
     | {% else %}
@@ -26,7 +27,7 @@ html(lang="en")
     meta(name="twitter:site" content="@{{ site.twitter_username }}")
     meta(name="twitter:creator" content="@{{ site.twitter_username }}")
     meta(name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}")
-    meta(name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}")
+    meta(name="twitter:description" content="{% if page.description %}{{ page.description }}{% elsif page.excerpt %}{{ page.excerpt | strip_html | truncatewords: 30 }}{% else %}{{ site.description }}{% endif %}")
     | {% if page.image %}
     meta(name="twitter:image" content="{{ site.url }}{{ page.image }}")
     | {% else %}
