feat(website): add comprehensive social sharing component
- Created reusable social-share.pug component with 5 sharing options
- Twitter/X, LinkedIn, Hacker News, Email, and Copy Link
- Added copy link functionality with clipboard API
- Integrated into post and project layouts
- Responsive button styling with Tailwind CSS
- Success feedback for copy link action

Closes one item from add-website-features task (19/25 -> 20/25)

--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -26,15 +26,8 @@ article.post
           | Written by {{ page.author }}
         | {% endif %}
 
-        .share.mt-4
-          p.text-sm.mb-2 Share this post:
-          .social-links
-            a(href="https://twitter.com/intent/tweet?text={{ page.title | url_encode }}&url={{ site.url }}{{ page.url }}" target="_blank" rel="noopener")
-              i.fab.fa-twitter
-              span Tweet
-            a(href="https://github.com/{{ site.github_username }}" target="_blank" rel="noopener")
-              i.fab.fa-github
-              span View on GitHub
+        //- Social sharing component
+        | {% include social-share.pug title=page.title url=page.url %}
 
         | {% if page.previous or page.next %}
         nav.post-nav
