--- a/_layouts/project.pug
+++ b/_layouts/project.pug
@@ -18,6 +18,9 @@ article.project
     .prose.mx-auto
       | {{ content }}
 
+      //- Social sharing component
+      | {% include social-share.pug title=page.title url=page.url %}
+
       | {% if page.categories %}
       .categories.mt-8
         h3
