--- a/index.pug
+++ b/index.pug
@@ -21,7 +21,7 @@ hero: true
 
 main.container.mx-auto.px-4.py-8
   //- Posts Column
-  div
+  div.fade-in-on-scroll
     h2.text-2xl.font-bold Latest Posts
     a.text-sm(href="/blog", class="hover:text-primary")
       | View all posts
@@ -38,7 +38,7 @@ main.container.mx-auto.px-4.py-8
     | {% endfor %}
 
   //- Projects Column
-  div
+  div.fade-in-on-scroll
     h2.text-2xl.font-bold Featured Projects
     a.text-sm(href="/projects" class="hover:text-primary")
       | View all projects
@@ -57,7 +57,7 @@ main.container.mx-auto.px-4.py-8
     | {% endfor %}
 
   //- Notes Column
-  div
+  div.fade-in-on-scroll
     h2.text-2xl.font-bold Recent Notes
     a.text-sm(href="/notes" class="hover:text-primary")
       | View all notes
