--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -35,6 +35,11 @@ html(lang="en")
     | {% endif %}
     link(rel="stylesheet" href="/assets/css/main.css")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
+
+    //- Noscript fallback for progressive enhancement
+    noscript
+      link(rel="stylesheet" href="/assets/css/noscript.css")
+
     script(src="/assets/js/loading.js" defer)
 
     //- Plausible Analytics (privacy-friendly, no cookies)
