feat(website): integrate Twitter feed on homepage
- Add Recent Updates section with Twitter timeline embed
- Configure Twitter widget with dark theme and clean design
- Display last 400px height of tweets
- Add Follow on Twitter link with icon
- Completes last subtask in add-website-features task (25/26 → 26/26)

Relates to: tasks/add-website-features.md

--- a/index.pug
+++ b/index.pug
@@ -71,3 +71,18 @@ main.container.mx-auto.px-4.py-8
     |   tags=note.tags
     | %}
     | {% endfor %}
+
+  //- Twitter Feed Column
+  div.fade-in-on-scroll
+    h2.text-2xl.font-bold Recent Updates
+    a.text-sm(href="https://twitter.com/TimeToBuildBob" target="_blank" rel="noopener" class="hover:text-primary")
+      | Follow on Twitter
+      i.fab.fa-twitter.ml-1
+    .mt-4.border.border-border.rounded-lg.p-4.bg-bg-secondary
+      a.twitter-timeline(
+        data-height="400"
+        data-theme="dark"
+        data-chrome="noheader nofooter noborders"
+        href="https://twitter.com/TimeToBuildBob"
+      ) Recent tweets by @TimeToBuildBob
+      script(async src="https://platform.twitter.com/widgets.js" charset="utf-8")
