--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,7 @@ layout: default
 hero: true
 ---
 
-.hero(class="bg-gradient-to-br from-primary to-secondary")
+.hero(class="bg-gradient-to-br from-primary dark:to-secondary")
   .container(class="py-16 text-center")
     img.w-32.h-32.rounded-full.mx-auto.mb-6.shadow-lg.border-4.border-white(srcset="/assets/images/bob-128.jpg 128w, /assets/images/bob-256.jpg 256w, /assets/images/bob-384.jpg 384w" sizes="128px" src="/assets/images/bob-256.jpg" alt="Bob's Profile Picture" width="128" height="128" loading="lazy")
     h1(class="text-4xl lg:text-5xl font-bold mb-4 text-text dark:text-white")
@@ -24,10 +24,11 @@ main.container.mx-auto.px-4.py-4
   div(class="grid md:grid-cols-2 gap-6 max-w-6xl mx-auto")
     //- Posts Column
     div.fade-in-on-scroll
-      h2.text-xl.font-bold.mb-3 Latest Posts
-      a.text-sm(href="/blog", class="hover:text-primary")
-        | View all posts
-        i.fas.fa-arrow-right.ml-1
+      div.flex.mb-2
+        h2.text-xl.font-bold Latest Posts
+        a.mt-1.ml-3.text-sm(href="/blog", class="hover:text-primary")
+          | View all
+          i.fas.fa-arrow-right.ml-1
       | {% for post in site.posts limit:2 %}
       | {% include card.pug
       |   type="post"
@@ -41,10 +42,11 @@ main.container.mx-auto.px-4.py-4
 
     //- Projects Column
     div.fade-in-on-scroll
-      h2.text-xl.font-bold.mb-3 Featured Projects
-      a.text-sm(href="/projects" class="hover:text-primary")
-        | View all projects
-        i.fas.fa-arrow-right.ml-1
+      div.flex.mb-2
+        h2.text-xl.font-bold Featured Projects
+        a.mt-1.ml-3.text-sm(href="/projects" class="hover:text-primary")
+          | View all
+          i.fas.fa-arrow-right.ml-1
       | {% for project in site.projects limit:2 %}
       | {% include card.pug
       |   type="project"
@@ -60,10 +62,11 @@ main.container.mx-auto.px-4.py-4
 
     //- Notes Column
     div.fade-in-on-scroll
-      h2.text-xl.font-bold.mb-3 Recent Notes
-      a.text-sm(href="/notes" class="hover:text-primary")
-        | View all notes
-        i.fas.fa-arrow-right.ml-1
+      div.flex.mb-2
+        h2.text-xl.font-bold Recent Notes
+        a.mt-1.ml-3.text-sm(href="/notes" class="hover:text-primary")
+          | View all
+          i.fas.fa-arrow-right.ml-1
       | {% for note in site.notes limit:2 %}
       | {% include card.pug
       |   type="note"
@@ -76,10 +79,11 @@ main.container.mx-auto.px-4.py-4
 
     //- Twitter Feed Column
     div.fade-in-on-scroll
-      h2.text-xl.font-bold.mb-3 Recent Updates
-      a.text-sm(href="https://twitter.com/TimeToBuildBob" target="_blank" rel="noopener" class="hover:text-primary")
-        | Follow on Twitter
-        i.fab.fa-twitter.ml-1
+      div.flex.mb-2
+        h2.text-xl.font-bold Recent Updates
+        a.mt-1.ml-3.text-sm(href="https://twitter.com/TimeToBuildBob" target="_blank" rel="noopener" class="hover:text-primary")
+          | Follow on
+          i.fab.fa-twitter.ml-1
       .mt-2.border.border-border.rounded-lg.p-3.bg-bg-secondary
         a.twitter-timeline(
           data-height="300"
